--- a/styles.css
+++ b/styles.css
@@ -41,38 +41,28 @@ p {
     font-family: "Arial", sans-serif;
     margin: 0;
 }
+
 table {
-    width: 100%;
     border-collapse: collapse;
-    display: inline-block;
-    vertical-align: top;
+    width: 50%;
     position: absolute;
-    top: 35%; /* Adjust as needed */
-    left: 50%; /* Adjust as needed */
-    transform: translate(-50%, -50%); /* Center the table */
-    z-index: 1; /* Ensure the table is on top */
-    border: none;
+    top: 50%;
+    left: 20px; /* Adjust as needed */
+    transform: translateY(-50%);
 }
-
-th {
-    border: 1px solid orange;
+th, td {
+    border: 1px solid hwb(0 0% 100%);
     padding: 8px;
-    text-align: left;
-    font-size: 40px;
-    color: white;
+    text-align: center;
     border: none;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    
 }
-
-td {
-    /* Change background color */
-    background-color: #f0f0f0; /* Example color */
-    font-size: 30px;
-    /* Change text color */
-    color: #333; /* Example color */
-}
-
 th {
-    background-color: red;
+    background-color: #ec2d0b;
+    color: white;
+    text-align: center;
 }
 .background-image {
     position: absolute;
